# docomo-event-actual-pipeline

./: .gitignore  .sqlfluff  .sqlfluffignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml  spreadsheet.py  transform_excel.py
.claude/agents/: numerical-verifier.md
docomo_event/: dbt_project.yml
docomo_event/macros/: calculate_percentile_by_month_week_flag_rank.sql  calculate_percentile_by_period_flag_rank.sql
docomo_event_actual/: dbt_project.yml
docomo_event_sf/: README.md  dbt_project.yml  profiles.yml.example
docomo_event_sf/macros/: generate_schema_name.sql  round_bq.sql
docomo_event_sf/models/: _sources.yml
docomo_event_sf/tools/: probe_float_divergence.py  verify_code.py
docs/: Snowflake移行進捗管理.xlsx  テーブル定義書.xlsx  データプロファイリングレポート.md  データプロファイリングレポート.xlsx  現行処理整理.md  移行対応整理.md
docs/sample_data/: raw_date_master.create.sql  raw_date_master.csv
excel_analytics_query/: 施設別目標設定シート_データソース抽出.sql  計画策定シート_データソース抽出用.sql
gas/: package.json  tsconfig.json
gas-data-prep/: main.ts  package-lock.json  package.json
operations_queries/: 施設別目標設定シート_データソース抽出.sql  最終マートテーブル作成用.sql  計画策定シート_データソース抽出用.sql
src/: event_acutual_processor.py  google_spreadsheets_repository.py  pipeline.py  transformer.py  utils.py
src/config/: config.py
src/repositories/: bigquery_repository.py
src/schemas/: date_master_schema.py  facility_daily_deviation_zscore_schema.py  facility_foot_traffic_sum_and_decile_by_flag_schema.py  facility_master_schema.py  facility_statistics_master_schema.py  (+1 more)
streamlit/: snowflake.yml
(+184 files in other folders)
